yml_files/Ingress controller/ingress no tls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: red-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
      - red.shiva-devops.online
    secretName: nginx-tls-default
  rules:
  - host: red.shiva-devops.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: red
            port:
              number: 80
              
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
      - blue.shiva-devops.online
    secretName: nginx-tls-default
  rules:
  - host: blue.shiva-devops.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue
            port:
              number: 80
              
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
      - green.shiva-devops.online
    secretName: nginx-tls-default
  rules:
  - host: green.shiva-devops.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: green
            port:
              number: 80
